Initial template rendering

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@
 # Root URL to the application.  Include the trialing slash.
 SITE_URL=http://sms-hybrid-refactor/
 
+# The directory where your application files live
+APP_DIR=edulink
+
 # -----------------------------------------------
 # Application Variables
 # -----------------------------------------------
