Added support for dynamic page titles

--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 # Application Variables
 # -----------------------------------------------
 
+# Application Name
+APP_NAME='EduLink Student Management System'
+
 # Root URL to the application.  Include the trialing slash.
 SITE_URL=http://sms-hybrid-refactor/
 
