Added Database connection layer

--- a/.env
+++ b/.env
@@ -19,4 +19,7 @@ APP_DIR=edulink
 LOGGED_IN_USERS_ONLY=false;
 
 # ++@ Database Config @++
+DB_HOST=localhost
 DB_NAME=qp_sms_hybrid_refactor
+DB_USER=root
+DB_PASS=root
